--- a/blog-core/src/main/resources/config/application-center-dev.yml
+++ b/blog-core/src/main/resources/config/application-center-dev.yml
@@ -7,18 +7,18 @@ spring:
       connection-init-sqls: set names utf8mb4
       driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://localhost:3306/dblog?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://118.24.153.209:3306/dblog?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: Aa@qq.com
   ####### Redis Config #######
   redis:
-    database: 5
+    database: 3
     # Redis服务器地址
-    host: 127.0.0.1
+    host: 118.24.153.209
     # Redis服务器连接端口
-    port: 6379
+    port: 6779
     # Redis服务器连接密码（默认为空）
-    password: qwe!@#123
+    password: Aa@qq.com
 
   ####### redis缓存服务配置 #######
   session:
